--- a/codeship-steps.yml
+++ b/codeship-steps.yml
@@ -4,4 +4,4 @@
 - name: deploy
   tag: master
   service: codeship_heroku_deployment
-  command: codeship_heroku deploy /deploy python-django-todoapp
+  command: codeship_heroku deploy /deploy holamundopythondjando
