--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   web:
     build: .
-    command: gunicorn -b 0.0.0.0:8000 todosapp.wsgi:application
+    command: gunicorn -b 0.0.0.0:8000 CCV.wsgi:application
     depends_on:
       - postgres
     volumes:
@@ -11,6 +11,7 @@ services:
       - "8000:8000"
     environment:
       DATABASE_URL: postgres://todoapp@postgres/todos
+
   postgres:
     image: postgres:9.6.2-alpine
     environment:
