--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   web:
     build: .
-    command: gunicorn -b 0.0.0.0:8000 CCV.wsgi:application
+    command: gunicorn -b 0.0.0.0:8000 todosapp.wsgi:application
     depends_on:
       - postgres
     volumes:
