--- a/codeship-services.yml
+++ b/codeship-services.yml
@@ -3,13 +3,13 @@ web_codeship_example_python:
   links:
     - postgres
   environment:
-    DATABASE_URL: "postgres://todoapp@postgres/todos"
+    DATABASE_URL: "postgres://todoapp@postgres/todos4321"
   cached: true
 postgres:
   image: postgres:9.6.2-alpine
   environment:
     POSTGRES_USER: todoapp
-    POSTGRES_DB: todos
+    POSTGRES_DB: todos4321
 codeship_heroku_deployment:
   image: codeship/heroku-deployment
   encrypted_env_file: deployment.env.encrypted
