--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,9 @@ services:
     ports:
       - "8000:8000"
     environment:
-      DATABASE_URL: postgres://todoapp@postgres/todos
+      DATABASE_URL: postgres://todoapp@postgres/todos4321
   postgres:
     image: postgres:9.6.2-alpine
     environment:
       POSTGRES_USER: todoapp
-      POSTGRES_DB: todos
+      POSTGRES_DB: todos4321
