--- a/codeship-steps.yml
+++ b/codeship-steps.yml
@@ -1,6 +1,6 @@
-- name: tests
-  service: web_codeship_example_python
-  command: bin/ci "python manage.py test"
+#- name: tests
+#  service: web_codeship_example_python
+#  command: bin/ci "python manage.py test"
 - name: deploy
   tag: master
   service: codeship_heroku_deployment
